[gd_scene load_steps=3 format=3 uid="uid://r274r6mr5x2t"]

[ext_resource type="Script" path="res://receiver/spotify/receiver.gd" id="1_qo02v"]
[ext_resource type="PackedScene" uid="uid://btfpi0208nkvw" path="res://receiver/spotify/spotify.tscn" id="2_wws2e"]

[node name="SpotifyReceiver" type="Node"]
script = ExtResource("1_qo02v")

[node name="Spotify" parent="." instance=ExtResource("2_wws2e")]

[node name="Auth" parent="Spotify" index="1"]
client_id = "5a2454d5df544fed9e1438fb3a909faa"

[node name="Timer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[connection signal="changed_token" from="Spotify" to="." method="_on_spotify_changed_token"]
[connection signal="finished_login" from="Spotify" to="." method="_on_spotify_finished_login"]
[connection signal="received_response" from="Spotify" to="." method="_on_spotify_received_response"]

[editable path="Spotify"]
